[gd_scene load_steps=11 format=3 uid="uid://balfjm4xyndc6"]

[ext_resource type="Script" path="res://main/character/player_blob/player_blob.gd" id="1_ppc7i"]
[ext_resource type="PackedScene" uid="uid://m3ms4jrd5ej3" path="res://main/character/character.tscn" id="1_qsgrj"]
[ext_resource type="PackedScene" uid="uid://cq6rbj6w8v03w" path="res://main/bullet/basic_bullet/basic_bullet.tscn" id="2_jrwog"]
[ext_resource type="PackedScene" path="res://main/character/player_blob/health_blob_positions/health_blobs_4.tscn" id="3_jpc2o"]
[ext_resource type="Texture2D" uid="uid://bqrgwkki1cfbs" path="res://main/assets/circle_sprite.png" id="4_jmpyn"]
[ext_resource type="AudioStream" uid="uid://cnboqak72oxm4" path="res://main/assets/hypno_sound.wav" id="6_8eif6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1t6o0"]
radius = 32.0

[sub_resource type="Animation" id="Animation_hr8ql"]
resource_name = "shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OuterSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.95, 0.95), Vector2(1.08, 1.08), Vector2(1, 1)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HealthBlobRoot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 3.14, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_13nwl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OuterSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HealthBlobRoot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_42gcf"]
_data = {
"RESET": SubResource("Animation_13nwl"),
"shoot": SubResource("Animation_hr8ql")
}

[node name="PlayerBlob" instance=ExtResource("1_qsgrj")]
scale = Vector2(0.25, 0.25)
script = ExtResource("1_ppc7i")
bullet_scene = ExtResource("2_jrwog")
movement_speed = 70.0
shoot_cooldown = 0.2
pitch_minimum = 0.8
pitch_maximum = 1.2

[node name="OuterSprite" type="Sprite2D" parent="." index="0"]
texture = ExtResource("4_jmpyn")

[node name="HealthBlobRoot" type="Node2D" parent="." index="1"]

[node name="HealthBlobs4" parent="HealthBlobRoot" index="0" instance=ExtResource("3_jpc2o")]

[node name="CollisionShape2D" parent="." index="2"]
shape = SubResource("CircleShape2D_1t6o0")

[node name="ShootDelayTimer" type="Timer" parent="." index="3"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
speed_scale = 5.0
libraries = {
"": SubResource("AnimationLibrary_42gcf")
}

[node name="ShootSoundPlayer" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource("6_8eif6")
